--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "heroku": "^0.2.0",
+    "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9"
   },
